# lineread

./: CHANGELOG.md  Cargo.toml  README.md
examples/: async.rs  color_prompt.rs  demo.rs  enter_function.rs  function.rs  path_completion.rs  signals.rs
src/: highlighting.rs  inputrc.rs  interface.rs  lib.rs  reader.rs  util.rs  writer.rs
src/windows/: path.rs
tests/: linefeed.rs
