[package]
name = "lineread"
description = "Interactive terminal input reader"

authors = ["Murarth <murarth@gmail.com>", "Hugo Wang <w@mitnk.com>"]
version = "0.7.0"
edition = "2018"

documentation = "https://docs.rs/lineread/"
homepage = "https://github.com/mitnk/lineread"
repository = "https://github.com/mitnk/lineread"

categories = ["command-line-interface"]
keywords = ["console", "terminal", "input", "readline"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
dirs = "1.0"
mortal = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "combaseapi", "minwindef", "ntdef", "shlobj", "winbase", "wincon",
    "winerror", "winuser" ] }

[dev-dependencies]
ansi_term = "0.11"
assert_matches = "1.2"
rand = "0.5"
